# picox

./: .gitignore  README.md  example.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yaml  python-publish.yml
_dev/: debug.py
piconnect/: __init__.py  cli.py  detect.py
piconnect/upy/rp2040/: __init__.py  rp2040.py
src/piconnect/upy/rp2040/: rp2040.py
src/picox/: __init__.py  cli.py  compiler.py  detect.py  exceptions.py  logconfig.py  upy.py
src/picox/commands/: compiled.py
src/picox/upy/rp2040/: rp2040.py
src/raw_commands/: CREATE_DIR.py  DELETE_PATH.py  DOWNLOAD_FILE.py  LS_DIR.py  UPLOAD_FILE.py
tools/: compile.py
