[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "piconnect"
version = "0.0.2"
authors = [
  { name="Harvey", email="harveythepsarky@gmail.com" },
]
description = "Interface with a Raspberry Pi Pico"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"